package com.progzc.facade;

/**
 * @Description 编解码器接口
 * @Author zhaocho
 * @Date 2020/12/12 17:06
 * @Email zcprog@foxmail.com
 * @Version V1.0
 */
public interface Codec {
}
