package com.progzc.facade;

/**
 * @Description MPEG编解码
 * @Author zhaochao
 * @Date 2020/12/12 17:06
 * @Email zcprog@foxmail.com
 * @Version V1.0
 */
public class MPEG4CompressionCodec implements Codec {
    public String type = "mp4";

}
