package com.progzc.facade;

/**
 * @Description Ogg编解码
 * @Author zhaochao
 * @Date 2020/12/12 17:07
 * @Email zcprog@foxmail.com
 * @Version V1.0
 */
public class OggCompressionCodec implements Codec {
    public String type = "ogg";
}
